@@ -5,18 +5,18 @@
 
     <groupId>net.unit8.enkan</groupId>
     <artifactId>enkan-parent</artifactId>
-    <version>0.11.0</version>
+    <version>0.12.0</version>
     <packaging>pom</packaging>
 
     <name>enkan-parent</name>
-    <url>https://github.com/kawasima/enkan</url>
+    <url>https://github.com/enkan/enkan</url>
     <description>An parent pom for Enkan</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <java.version>21</java.version>
 
-        <enkan.version>0.11.0</enkan.version>
+        <enkan.version>0.12.0</enkan.version>
         <maven.version>3.6.3</maven.version>
 
         <!-- Maven Plugin-->
@@ -29,18 +29,18 @@
 
 
         <!-- Jakarta EE -->
-        <jakarta.transaction.version>2.0.0</jakarta.transaction.version>
-        <jakarta.enterprise.version>3.0.0</jakarta.enterprise.version>
+        <jakarta.transaction.version>2.0.1</jakarta.transaction.version>
+        <jakarta.enterprise.version>3.0.1</jakarta.enterprise.version>
         <jakarta.servlet.version>6.1.0</jakarta.servlet.version>
-        <jackson.version>2.21.0</jackson.version>
-        <jakarta.ws.rs.version>3.1.0</jakarta.ws.rs.version>
-        <jakarta.validation.version>3.0.2</jakarta.validation.version>
-        <jakarta.persistence.version>3.1.0</jakarta.persistence.version>
+        <jackson.version>3.0.4</jackson.version>
+        <jakarta.ws.rs.version>4.0.0</jakarta.ws.rs.version>
+        <jakarta.validation.version>3.1.1</jakarta.validation.version>
+        <jakarta.persistence.version>3.2.0</jakarta.persistence.version>
 
         <doma.version>2.62.1</doma.version>
         <slf4j.version>2.0.17</slf4j.version>
         <junit.version>5.14.3</junit.version>
-        <assertj.version>3.27.6</assertj.version>
+        <assertj.version>3.27.7</assertj.version>
     </properties>
 
     <modules>
@@ -49,8 +49,8 @@
         <module>enkan-web</module>
         <module>enkan-servlet</module>
         <module>enkan-repl</module>
-        <module>enkan-repl-pseudo</module>
-        <module>enkan-repl-jshell</module>
+        <module>enkan-repl-server</module>
+        <module>enkan-repl-client</module>
         <module>enkan-devel</module>
         <module>enkan-devel-gradle</module>
         <module>enkan-component-HikariCP</module>
@@ -64,7 +64,6 @@
         <module>enkan-component-jpa</module>
         <module>enkan-component-eclipselink</module>
         <module>enkan-component-jackson</module>
-        <module>enkan-component-s2util-beans</module>
         <module>enkan-component-metrics</module>
         <module>kotowari</module>
         <module>kotowari-jpa</module>
@@ -99,6 +98,7 @@
                         <argLine>
                             --add-opens java.base/java.lang=ALL-UNNAMED
                             --add-opens java.base/java.lang.invoke=ALL-UNNAMED
+                            -XX:+EnableDynamicAgentLoading
                         </argLine>
                     </configuration>
                 </plugin>
@@ -183,15 +183,15 @@
     </build>
 
     <scm>
-        <url>https://github.com/kawasima/enkan</url>
-        <connection>scm:git://github.com/kawasima/enkan.git</connection>
-        <developerConnection>scm:git:git@github.com/kawasima/enkan.git</developerConnection>
+        <url>https://github.com/enkan/enkan</url>
+        <connection>scm:git://github.com/enkan/enkan.git</connection>
+        <developerConnection>scm:git:git@github.com/enkan/enkan.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
 
     <issueManagement>
         <system>GitHub</system>
-        <url>https://github.com/kawasima/enkan/issues</url>
+        <url>https://github.com/enkan/enkan/issues</url>
     </issueManagement>
 
     <inceptionYear>2016</inceptionYear>
@@ -238,7 +238,12 @@
             </dependency>
             <dependency>
                 <groupId>${project.groupId}</groupId>
-                <artifactId>enkan-repl-pseudo</artifactId>
+                <artifactId>enkan-repl-server</artifactId>
+                <version>${enkan.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>${project.groupId}</groupId>
+                <artifactId>enkan-repl-client</artifactId>
                 <version>${enkan.version}</version>
             </dependency>
             <dependency>
@@ -318,7 +323,7 @@
             <dependency>
                 <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                <version>8.0.3.Final</version>
+                <version>9.0.1.Final</version>
             </dependency>
             <dependency>
                 <groupId>org.glassfish.expressly</groupId>
@@ -333,16 +338,11 @@
             <dependency>
                 <groupId>com.zaxxer</groupId>
                 <artifactId>HikariCP</artifactId>
-                <version>6.3.3</version>
+                <version>7.0.2</version>
             </dependency>
             <dependency>
-                <groupId>com.fasterxml.jackson.core</groupId>
+                <groupId>tools.jackson.core</groupId>
                 <artifactId>jackson-databind</artifactId>
-                <version>${jackson.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.version}</version>
             </dependency>
             <dependency>
@@ -394,6 +394,9 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-gpg-plugin</artifactId>
+                        <configuration>
+                            <bestPractices>true</bestPractices>
+                        </configuration>
                         <executions>
                             <execution>
                                 <id>sign-artifacts</id>
